# hemisphere-driver

./: CONTRIBUTING.md  README.md  SPECS_REF  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: codegen.py
src/eugene_plexus_hemisphere_driver/: __init__.py  __main__.py  app.py  auth_state.py  config.py  dependencies.py  providers.py  security.py  settings.py
src/eugene_plexus_hemisphere_driver/_generated/: __init__.py  models.py
src/eugene_plexus_hemisphere_driver/adapters/: _prompt.py  _subprocess.py  base.py  claude_code_cli.py  codex_cli.py  openai_api.py
src/eugene_plexus_hemisphere_driver/engines/: base.py  claude_code_cli.py  codex_cli.py  openai_compat_http.py
src/eugene_plexus_hemisphere_driver/routes/: admin.py  config.py  generate.py  health.py  info.py
tests/: conftest.py  test_adapters.py  test_admin.py  test_at_rest_encryption.py  test_auth.py  test_config.py  test_degraded_mode.py  test_generate_route.py  test_health.py  test_info.py  test_openai_api_adapter.py  test_safe_mode.py
