[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eugene-plexus-hemisphere-driver"
version = "0.1.0"
description = "One half of an Eugene Plexus bicameral pair: a uniform HTTP wrapper around a single LLM backend (Claude Code CLI, Codex CLI, or API)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Eugene Plexus contributors" },
]
keywords = ["eugene-plexus", "llm", "fastapi", "consciousness", "bicameral"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",          # for FastAPI test client
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "types-pyyaml>=6,<7",
    "datamodel-code-generator>=0.26,<1",
]

[project.scripts]
eugene-plexus-hemisphere-driver = "eugene_plexus_hemisphere_driver.__main__:main"

[project.urls]
Homepage = "https://github.com/eugene-plexus"
Repository = "https://github.com/eugene-plexus/hemisphere-driver"
Specs = "https://github.com/eugene-plexus/specs"

[tool.hatch.build.targets.wheel]
packages = ["src/eugene_plexus_hemisphere_driver"]

# -----------------------------------------------------------------------------
# Ruff (linter + formatter)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "src/eugene_plexus_hemisphere_driver/_generated",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async-correctness
    "SIM",           # simplifications
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
# call-arg is disabled because mypy doesn't recognize pydantic's
# `field: T = Field(default, ...)` defaults — every optional codegen'd
# Pydantic field is reported as missing at the call site otherwise.
# We keep call-arg's mistype-detection role through ruff. Reconsider
# enabling the pydantic.mypy plugin once the wire-construction code
# stabilizes (currently it errors on these same defaults too).
disable_error_code = ["call-arg"]
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "src/eugene_plexus_hemisphere_driver/_generated",
]

[[tool.mypy.overrides]]
module = "eugene_plexus_hemisphere_driver._generated.*"
ignore_errors = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
